--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
     padding:0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    background-color: #1A1A1A;
+}
 h1, h2, h3, h4, h5, h6{
     
     color:#D9D9D9;
@@ -14,9 +21,7 @@ h1{
 a {
     line-height: 45px;
 }
-body{
-    background-color: #151515;
-}
+
 .navbar {
     position: absolute;
     left: 0px;
@@ -32,8 +37,8 @@ body{
     margin-bottom: 20px;
 }
 p{
-    font-family: 'Inter', ;
-    font: normal;
+    font-family: 'Inter',;
+    font-style: normal;
     font-weight: normal;
     color: #fff;
 }
@@ -46,27 +51,38 @@ p{
    
 }
 /* TITLE */
-
-
-
-.title{
-    background-image: url('./img/main.jpg');
-    min-height: 133vh;
+.title {
+    background-image: url('./img/main.png');
     position: relative;
     background-position: right ;
     background-size: cover;
     background-repeat: no-repeat;
+    padding: 100px 0;
 }
 
 .title-content {
     position: relative;
-    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: #fff;
     
+}
+
+.title-info-content{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-info{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .overlay {
@@ -101,27 +117,8 @@ p{
     height: 75px;
     letter-spacing: 4px;
     margin: 25px 0 40px 0;
-
 }
 
-
-.title-info-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 400px;
-}
-
-.title-info{
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#title-info.container{
-    margin-top: 50px;
-}
 
 .title-content h1{
     font-size: 72px;
@@ -132,31 +129,23 @@ p{
 }
 .title-content p{
         text-align: center;
-        width: 595px;
-        height: 52px;
+        width: 100%;
+        max-width: 600px;
         font-weight: 300;
         font-size: 16px;
         line-height: 26px;
         letter-spacing: -0.2px;
-        position: relative;
         opacity: 0.7;
-} 
+     } 
+
 .title-content span{
             font-weight: 300;
  }        
 
- .title-info-content p{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 30px;
- }
- .title-info-content h6{
-    font-family: 'Inter',;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
+ .title-info p{
+    font-size: 14px;
+    font-weight: 400;
+
  }
 /* work section */
 
@@ -164,13 +153,14 @@ p{
     text-align: center;
 }
 
+
 .work{
     padding: 40px;
 }
 .small-title h2{
     font-size: 150px;
     letter-spacing: 7px;
-    color:#252525;
+    color:#303030;
     font-family: 'Abel', sans-serif;
     letter-spacing: 1px;
     letter-spacing: 10px;
@@ -233,11 +223,11 @@ hr{
     flex-wrap: wrap;
 }
 
- @media only screen and (max-width:2220px){
+  @media only screen and (max-width:2220px){
     .work-blank{
         margin: 15px 15px;
     }
-   
+} 
 
 /*
  ********
@@ -249,11 +239,11 @@ hr{
     padding: 40px;
 }
 
-@media only screen and (max-width: 635px) {
-    .dishes h3 {
+ @media only screen and (min-width: 320px) {
+     .small-title h3 {
       text-align: center;
     }
-  }
+  } 
 
 .dishes-blank-img{
     min-height: 260px;
@@ -310,9 +300,10 @@ hr{
 
 .dishes-blank{
     width: 350px;
-    margin: 20px 10px;
+    margin: 24px 16px;
     
 }
+
 
 
 .dishes-blank-title .btn{
@@ -322,12 +313,12 @@ hr{
     font-weight: bold;
     margin: 0 10px;
     color: grey;
-    margin-left: 40px;
-    width: 100px;
+    margin-left: 20px;
+    width: 113px;
     height: 40px;
 }
 
-.btn span{
+.orderButton span{
     color: grey;
     font-size: 13px;
     font-weight: bold;
@@ -336,16 +327,22 @@ hr{
 
 .dishes-wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    margin: 0 340px;
-}
-@media only screen and (max-width: 1375px) {
-    .dishes-wrapper {
-      margin: 0 135px;
-    }
+    margin: 0 300px;
+}  
+@media only screen and (max-width: 1440px) {
+  .dishes-wrapper{
+    margin: 0;
+    width: 100%;
   }
+ } 
 
+ @media only screen and (min-width:2560px){
+     .dishes-wrapper{
+         margin: 0 500px;
+     }
+ }
 .dishes-title-order{
     display: flex;
     align-items: center;
@@ -354,7 +351,9 @@ hr{
 .black{
     color: black !important;
 }
-
+.order-button{
+    background-color: #34C759;
+}
 /* 
     *******
     *******  CHEFS SECTION
@@ -465,11 +464,211 @@ hr{
     justify-content: center;
 }
 
-.order-button{
-    background-color: #34C759;
-}
+
 
 .star{
     color: #F9AD3D !important;
+    
 }
 
+/* ABOUT */
+
+.about{
+    padding: 40px;
+    position: relative;
+    background-color: #252525;
+    width: 100%;
+    min-height: 730px;
+    background-color: #1A1A1A;
+}
+
+
+.img-carousel{
+    width: 350px;
+    height: 270px;}
+    
+/* recipes 
+********
+********
+********
+********
+*/
+.recipes{
+    padding: 40px;
+}
+.recipes-wrapper{
+    display: flex;
+    justify-content: space-evenly;
+}
+.big-recipes-blank{
+    background-image:url('./img/recipes-1.png');
+    background-position: center;
+    background-size: cover;
+    border-radius: 6px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    margin-right: 30px;
+}
+
+.big-recipes-blank h4{
+    color: #fff !important;
+    font-weight: 500;
+    line-height: 40px;
+    font-size: 24px;
+    text-align: center;
+}
+.big-recipes-blank span{
+    font-size: 14px;
+    line-height: 30px;
+    font-weight: 500;
+    margin: 0 15px;
+}
+
+.recipes p{
+    letter-spacing: 1.2px;
+    font-weight: 700;
+    font-size: 10px;
+    margin-bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    padding: 7px;
+    
+}
+.blank-lower{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.small-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-content:space-between;
+}
+.srb-1{
+    background-image: url('./img/recipes-2.png');
+}
+
+.srb-2{
+    background-image: url('./img/recipes-3.png');
+}
+
+.srb-3{
+    background-image: url('./img/recipes-4.png');
+    margin-bottom: 0 !important;
+}
+
+.small-recipes-blank{
+    background-position: center;
+    background-size: cover;
+    border-radius: 6px;
+    width: 540px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+/* 
+******
+******
+******  SOCIAL
+******
+******
+ */
+
+.social{
+    padding: 40px;
+
+}
+.middle{
+    width: 350px;
+    background-color: #303030;
+    height: 2px;
+    margin-top: 23px;
+}
+
+.social span{
+    color: #BFBFBF;
+    font-weight: 500;
+    font-size: 14px;
+    font-style: 14px;
+}
+.social p{
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 30px;
+text-align: left;
+margin: 10px 0;
+}
+
+.social i{
+    color: #737373;
+    border-radius: 20px;
+    border: 2px solid  #303030;
+    padding: 9px;
+}
+
+.fa.fa-facebook{
+    padding: 9px 11px;
+}
+
+.social-wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.social-blank{
+    background-color: #252525;
+    margin-right: 30px;
+    width: 350px;
+    border-radius: 10px;
+}
+
+.social-blank button{
+    border: 2px solid #303030;
+    border-radius: 50px;
+    font-family: 'Inter',;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 10px;
+    width: 100px;
+    height: 40px;
+    padding: 0;
+    letter-spacing: 0.2em;
+    color: #737373;
+}
+
+.social-blnk-upper{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.social-blnk-lower{
+    padding: 30px;
+}
+
+.inst-lower img{
+    width: 115px;
+    height: 120px;
+}
+
+.inst-lower .bigger{
+    width: 120px;
+}
+
+
+.inst-lower{
+display: flex;
+flex-wrap: wrap;
+padding: 0;
+margin-top: 26px;
+}
+
+.facebook-blnk{
+    margin: 0;
+}
