--- a/style.css
+++ b/style.css
@@ -50,6 +50,36 @@ p{
     margin-left: 10px;
    
 }
+/* *****
+********
+******** logo logo logo
+********
+*******
+ */
+
+ .logo-upper{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+.logo{
+    display: flex;
+    flex-direction: column;
+    margin-right:10px ;
+}
+.logo-lower{
+    display: flex;
+}
+.logo-content{
+    display: flex;
+    align-items: center;
+}
+
+
+
+
+
 /* TITLE */
 .title {
     background-image: url('./img/main.png');
@@ -196,9 +226,24 @@ hr{
     padding: 20px;
     margin: 0 23px;
     border-radius: 6px;
-    
-    
 }
+
+@media only screen and (max-width:1024px){
+  .work-blank{
+      width: 300px;
+  }
+}
+.hover{
+    color: black !important;
+}
+.hover-blank{
+    background-color:#34C759 ;
+}
+.hover-lines{
+    background-color: black !important;
+}
+
+
 .work-blank p{
     color: grey;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -625,6 +670,7 @@ margin: 10px 0;
     margin-right: 30px;
     width: 350px;
     border-radius: 10px;
+    max-height: 330px;
 }
 
 .social-blank button{
@@ -657,10 +703,10 @@ margin: 10px 0;
     height: 120px;
 }
 
+
 .inst-lower .bigger{
     width: 120px;
 }
-
 
 .inst-lower{
 display: flex;
@@ -671,4 +717,35 @@ margin-top: 26px;
 
 .facebook-blnk{
     margin: 0;
+}
+
+/* *******
+********
+********  FOOTER
+********
+********* */
+
+
+.footer{
+    padding: 40px 0 30px 0;
+    background-color: #252525;
+}
+
+.footer-line{
+    background-color:#303030;
+    width: 100%;
+    height: 2px; 
+}
+
+.footer-logo{
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+}
+
+.copyrigth p{
+    color: #737373;
+    margin: 10px 0;
 }
