--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{
 overflow: hidden;
 }
 .lock-section{
-    opacity: 0.1;
+    opacity: 0.1 !important;
     
 }
 
@@ -143,6 +143,62 @@ p{
     color: #fff;
     z-index: 300;
 }
+@media only screen and(max-width: 1400px){
+    .cancel-button-form{
+        right: 20%;
+    } 
+}
+
+.form_signIn{
+    position: relative;
+}
+.cancel-button-form{ 
+    position: absolute;
+    bottom: 0;
+    right: -60%;
+    width: 150px;
+    height: 60px;
+    color: #3498db;
+    border: 4px solid;
+    font-size: 16px;
+    text-align: center;
+    font-family: "montserrat",sans-serif;
+    font-weight: 700;
+    padding-top:15px ;
+    cursor: pointer;
+    margin-left: 30px;
+    border-radius: 10px;
+    
+}
+ .cancel-button-form:hover{
+    color: #3498db;
+}
+
+
+.cancel-button-form::before,.cancel-button-form::after{
+    content: "";
+    position: absolute;
+    width: 14px;
+    height: 4px;
+    background: #34C759;
+    transform: skewX(50deg);
+    transition: .4s linear;
+}
+.cancel-button-form::before{
+    top: -4px;
+    left: 10%;
+}
+.cancel-button-form::after{
+    bottom: -4px;
+    right: 10%;
+}
+.cancel-button-form:hover::after{
+    right: 80%;
+}
+.cancel-button-form:hover::before{
+    left: 80%;
+}
+
 input{
     height: 47px;
     padding: 20px 20px;
@@ -177,7 +233,7 @@ label{
 	display: none;
 }
 .show-form{
-	display: block !important;
+    display: block !important;
 }
 
 
