--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p{
     font-size: 30px;
     margin-bottom: 20px;
 }
-@media only screen and (max-width: 990px){
+@media only screen and (max-width: 991px){
     .navbar-nav{
     text-align: left;
     }      
@@ -58,6 +58,10 @@ p{
     .second-ul{
         margin-left: 0px !important;
     }
+    .active-nav{
+        background-color:rgba(48, 48, 48, 0.9);
+                          
+    }
 }
 .navbar {
     position: fixed;
@@ -67,10 +71,7 @@ p{
     z-index: 300;  
     transition: all 0.5s ease 0s;
 }
-.active-nav{
-    background-color:rgba(48, 48, 48, 0.9);
-                      
-}
+
 .navbar-toggler-icon i{
     color:#34C759 ;
     font-size: 30px;
@@ -143,11 +144,6 @@ p{
     color: #fff;
     z-index: 300;
 }
-@media only screen and(max-width: 1400px){
-    .cancel-button-form{
-        right: 20%;
-    } 
-}
 
 .form_signIn{
     position: relative;
@@ -155,10 +151,10 @@ p{
 .cancel-button-form{ 
     position: absolute;
     bottom: 0;
-    right: -60%;
+    left: 80%;
     width: 150px;
     height: 60px;
-    color: #3498db;
+    color: #7d7d7d;
     border: 4px solid;
     font-size: 16px;
     text-align: center;
@@ -171,7 +167,7 @@ p{
     
 }
  .cancel-button-form:hover{
-    color: #3498db;
+    color: #7d7d7d;
 }
 
 
@@ -180,7 +176,7 @@ p{
     position: absolute;
     width: 14px;
     height: 4px;
-    background: #34C759;
+    background: #15dfed;
     transform: skewX(50deg);
     transition: .4s linear;
 }
