--- a/style.css
+++ b/style.css
@@ -143,50 +143,55 @@ p{
     color: #fff;
     z-index: 300;
 }
+form h4{
+    text-align: center;
+    letter-spacing: 3px;
+    font-weight: 400;
+    color: #fff;
+}
 
 .form_signIn{
     position: relative;
+    padding: 20px;
 }
 .cancel-button-form{ 
     position: absolute;
-    bottom: 0;
-    left: 100%;
-    width: 150px;
-    height: 60px;
+    bottom: 4%;
+    left: 60%;
+    width: 115px;
+    height: 50px;
     color: #7d7d7d;
-    border: 4px solid;
+    border: 3px solid;
     font-size: 16px;
     text-align: center;
-    font-family: "montserrat",sans-serif;
-    font-weight: 700;
-    padding-top:15px ;
+    font-family: "Montserrat",sans-serif;
+    font-weight: 600;
+    padding-top: 11px;
     cursor: pointer;
     margin-left: 30px;
     border-radius: 10px;
+    text-transform: uppercase;
     
 }
  .cancel-button-form:hover{
     color: #7d7d7d;
 }
 
-
-
-
 .cancel-button-form::before,.cancel-button-form::after{
     content: "";
     position: absolute;
     width: 14px;
-    height: 4px;
-    background: #15dfed;
+    height: 3px;
+    background: #3598db;
     transform: skewX(50deg);
     transition: .4s linear;
 }
 .cancel-button-form::before{
-    top: -4px;
+    top: -3px;
     left: 10%;
 }
 .cancel-button-form::after{
-    bottom: -4px;
+    bottom: -3px;
     right: 10%;
 }
 .cancel-button-form:hover::after{
@@ -196,11 +201,15 @@ p{
     left: 80%;
 }
 
+input[type = "password"]{
+    position: relative;
+}
+
 input[type = "text"],input[type = "email"],input[type = "password"] {
     border: 0;
     background: #303030 ;
     outline: none;
-    width: 250px;
+    width: 300px;
     height: 60px;
     text-align: center;
     padding: 20px 20px;
@@ -208,22 +217,93 @@ input[type = "text"],input[type = "email"],input[type = "password"] {
     border: 2px solid #3598db;
     color: #fff;
     transition: 0.25s;
+    
 }
 
-.gender input{
-width: auto;
+.gender{
+    display: flex;
+    justify-content: space-around;
+	padding: 0;
+	margin-top: 20px;
 }
-label{
-	display: block;
-    padding-top: 10px;
+.cont {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+  .cont input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .radiomark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 26px;
+    width: 26px;
+    background: none;
+    border-radius: 50%;
+    border: 2px solid gray;
+  }
+
+ 
+
+  .radiomark:after {
+    content: "";
+    position: absolute;
+    display: block;
+  }
+  .gender-label input:checked ~ .radiomark:after {
+    display: block;
+    background: #35dae6;
+  }
+  .gender-label .radiomark:after {
+    top: 7px;
+    left: 7px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: gray;
+ }
+
+input[type = "submit"]{
+outline: 0;
+width: 150px;
+height: 50px;
+background: none;
+color: #7d7d7d;
+border: 3px solid;
+border-radius: 10px;
+font-family: "Montserrat",sans-serif;
+font-weight: 600;
+font-size: 16px;
+margin-top: 20px;
+}
+
+input[type = "submit"]:hover{
+    color:#3598db ;
+    transition:0.30s;
+}
+
+
+
+label[for = 'login'],label[for = 'password'],label[for = 'email'] {
+    margin-bottom: 7px;
+    display: block;
+    padding-top: 15px;
     margin-bottom: 0;
     font-size: 20px;
     text-align: center;
 }
-.gender label{
-    padding: 0;
-    padding-bottom: 2px;
-}
+
+
+
+
 .show-password-button.eye_close::after{
     display: none;
 }
@@ -240,24 +320,11 @@ label{
 }
 .show-password-button{
     position: absolute;
-    top: 47.5%;
-    right: 10%;
+    top: 43.3%;
+    right: 16%;
 }
 
-.gender input{
-    margin: 0 10px;
-}
 
-.register{
-    height: 40px;
-    padding: 0;
-}
-.gender{
-	display: flex;
-    align-items: center;
-	padding: 0;
-	margin-top: 10px;
-}
 
 .form_signIn{
 	display: none;
